--- a/external/book/content/book/pt-br/v2/Branches-no-Git-Branches-em-poucas-palavras.html
+++ b/external/book/content/book/pt-br/v2/Branches-no-Git-Branches-em-poucas-palavras.html
@@ -16,6 +16,11 @@ book:
     previous: book/pt-br/v2/Fundamentos-de-Git-Sumário
     next: book/pt-br/v2/Branches-no-Git-O-básico-de-Ramificação-Branch-e-Mesclagem-Merge
 title: Git - Branches em poucas palavras
+aliases:
+- "/book/pt-br/Ramificação-Branching-no-Git.html"
+- "/book/pt-br/v1/Ramificação-Branching-no-Git.html"
+- "/book/pt-br/Ramificação-Branching-no-Git-O-que-é-um-Branch.html"
+- "/book/pt-br/v1/Ramificação-Branching-no-Git-O-que-é-um-Branch.html"
 ---
 <p>
 Quase todo Sistema de Controle de Versionamento tem alguma forma de suporte a ramificações (Branches).
