--- a/external/book/content/book/pt-br/v2/Branches-no-Git-Branches-remotos.html
+++ b/external/book/content/book/pt-br/v2/Branches-no-Git-Branches-remotos.html
@@ -16,6 +16,9 @@ book:
     previous: book/pt-br/v2/Branches-no-Git-Fluxo-de-Branches
     next: book/pt-br/v2/Branches-no-Git-Rebase
 title: Git - Branches remotos
+aliases:
+- "/book/pt-br/Ramificação-Branching-no-Git-Branches-Remotos.html"
+- "/book/pt-br/v1/Ramificação-Branching-no-Git-Branches-Remotos.html"
 ---
 <h2 id="r_remote_branches">Branches remotos</h2>
 <div class="paragraph">
