--- a/external/book/content/book/pt-br/v2/Branches-no-Git-Fluxo-de-Branches.html
+++ b/external/book/content/book/pt-br/v2/Branches-no-Git-Fluxo-de-Branches.html
@@ -16,6 +16,9 @@ book:
     previous: book/pt-br/v2/Branches-no-Git-Gestão-de-Branches
     next: book/pt-br/v2/Branches-no-Git-Branches-remotos
 title: Git - Fluxo de Branches
+aliases:
+- "/book/pt-br/Ramificação-Branching-no-Git-Fluxos-de-Trabalho-com-Branches.html"
+- "/book/pt-br/v1/Ramificação-Branching-no-Git-Fluxos-de-Trabalho-com-Branches.html"
 ---
 <h2 id="_fluxo_de_branches">Fluxo de Branches</h2>
 <div class="paragraph">
