--- a/external/book/content/book/pt-br/v2/Branches-no-Git-Gestão-de-Branches.html
+++ b/external/book/content/book/pt-br/v2/Branches-no-Git-Gestão-de-Branches.html
@@ -17,6 +17,9 @@ book:
     next: book/pt-br/v2/Branches-no-Git-Fluxo-de-Branches
 title: Git - Gestão de Branches
 url: "/book/pt-br/v2/Branches-no-Git-Gestão-de-Branches.html"
+aliases:
+- "/book/pt-br/Ramificação-Branching-no-Git-Gerenciamento-de-Branches.html"
+- "/book/pt-br/v1/Ramificação-Branching-no-Git-Gerenciamento-de-Branches.html"
 ---
 <h2 id="r_branch_management">Gestão de Branches</h2>
 <div class="paragraph">
