--- a/external/book/content/book/pt-br/v2/Branches-no-Git-O-básico-de-Ramificação-Branch-e-Mesclagem-Merge.html
+++ b/external/book/content/book/pt-br/v2/Branches-no-Git-O-básico-de-Ramificação-Branch-e-Mesclagem-Merge.html
@@ -17,6 +17,9 @@ book:
     next: book/pt-br/v2/Branches-no-Git-Gestão-de-Branches
 title: Git - O básico de Ramificação (Branch) e Mesclagem (Merge)
 url: "/book/pt-br/v2/Branches-no-Git-O-básico-de-Ramificação-Branch-e-Mesclagem-Merge.html"
+aliases:
+- "/book/pt-br/Ramificação-Branching-no-Git-Básico-de-Branch-e-Merge.html"
+- "/book/pt-br/v1/Ramificação-Branching-no-Git-Básico-de-Branch-e-Merge.html"
 ---
 <h2 id="_o_básico_de_ramificação_branch_e_mesclagem_merge">O básico de Ramificação (Branch) e Mesclagem (Merge)</h2>
 <div class="paragraph">
