--- a/external/book/content/book/pt-br/v2/Branches-no-Git-Rebase.html
+++ b/external/book/content/book/pt-br/v2/Branches-no-Git-Rebase.html
@@ -16,6 +16,9 @@ book:
     previous: book/pt-br/v2/Branches-no-Git-Branches-remotos
     next: book/pt-br/v2/Branches-no-Git-Sumário
 title: Git - Rebase
+aliases:
+- "/book/pt-br/Ramificação-Branching-no-Git-Rebasing.html"
+- "/book/pt-br/v1/Ramificação-Branching-no-Git-Rebasing.html"
 ---
 <h2 id="r_rebasing">Rebase</h2>
 <div class="paragraph">
