--- a/external/book/content/book/pt-br/v2/Branches-no-Git-Sumário.html
+++ b/external/book/content/book/pt-br/v2/Branches-no-Git-Sumário.html
@@ -17,6 +17,9 @@ book:
     next: book/pt-br/v2/Git-no-servidor-Os-Protocolos
 title: Git - Sumário
 url: "/book/pt-br/v2/Branches-no-Git-Sumário.html"
+aliases:
+- "/book/pt-br/Ramificação-Branching-no-Git-Sumário.html"
+- "/book/pt-br/v1/Ramificação-Branching-no-Git-Sumário.html"
 ---
 <h2 id="_sumário_3">Sumário</h2>
 <div class="paragraph">
