--- a/external/book/content/book/pt-br/v2/Começando-Configuração-Inicial-do-Git.html
+++ b/external/book/content/book/pt-br/v2/Começando-Configuração-Inicial-do-Git.html
@@ -17,6 +17,9 @@ book:
     next: book/pt-br/v2/Começando-Pedindo-Ajuda
 title: Git - Configuração Inicial do Git
 url: "/book/pt-br/v2/Começando-Configuração-Inicial-do-Git.html"
+aliases:
+- "/book/pt-br/Primeiros-passos-Configuração-Inicial-do-Git.html"
+- "/book/pt-br/v1/Primeiros-passos-Configuração-Inicial-do-Git.html"
 ---
 <h2 id="r_first_time">Configuração Inicial do Git</h2>
 <div class="paragraph">
