--- a/external/book/content/book/pt-br/v2/Começando-O-Básico-do-Git.html
+++ b/external/book/content/book/pt-br/v2/Começando-O-Básico-do-Git.html
@@ -17,6 +17,9 @@ book:
     next: book/pt-br/v2/Começando-A-Linha-de-Comando
 title: Git - O Básico do Git
 url: "/book/pt-br/v2/Começando-O-Básico-do-Git.html"
+aliases:
+- "/book/pt-br/Primeiros-passos-Noções-Básicas-de-Git.html"
+- "/book/pt-br/v1/Primeiros-passos-Noções-Básicas-de-Git.html"
 ---
 <h2 id="_o_básico_do_git">O Básico do Git</h2>
 <div class="paragraph">
