--- a/external/book/content/book/pt-br/v2/Começando-Pedindo-Ajuda.html
+++ b/external/book/content/book/pt-br/v2/Começando-Pedindo-Ajuda.html
@@ -17,6 +17,9 @@ book:
     next: book/pt-br/v2/Começando-Sumário
 title: Git - Pedindo Ajuda
 url: "/book/pt-br/v2/Começando-Pedindo-Ajuda.html"
+aliases:
+- "/book/pt-br/Primeiros-passos-Obtendo-Ajuda.html"
+- "/book/pt-br/v1/Primeiros-passos-Obtendo-Ajuda.html"
 ---
 <h2 id="r_git_help">Pedindo Ajuda</h2>
 <div class="paragraph">
