--- a/external/book/content/book/pt-br/v2/Começando-Sobre-Controle-de-Versão.html
+++ b/external/book/content/book/pt-br/v2/Começando-Sobre-Controle-de-Versão.html
@@ -17,6 +17,11 @@ book:
     next: book/pt-br/v2/Começando-Uma-Breve-História-do-Git
 title: Git - Sobre Controle de Versão
 url: "/book/pt-br/v2/Começando-Sobre-Controle-de-Versão.html"
+aliases:
+- "/book/pt-br/Primeiros-passos.html"
+- "/book/pt-br/v1/Primeiros-passos.html"
+- "/book/pt-br/Primeiros-passos-Sobre-Controle-de-Versão.html"
+- "/book/pt-br/v1/Primeiros-passos-Sobre-Controle-de-Versão.html"
 ---
 <p>Este capítulo abordará como começar com o Git.
 Nós vamos começar explicando sobre algumas ferramentas de controle de versão, então vamos falar de como ter o Git rodando no seu sistema e finalmente como configurá-lo para começar a trabalhar com ele.
