--- a/external/book/content/book/pt-br/v2/Começando-Sumário.html
+++ b/external/book/content/book/pt-br/v2/Começando-Sumário.html
@@ -17,6 +17,9 @@ book:
     next: book/pt-br/v2/Fundamentos-de-Git-Obtendo-um-Repositório-Git
 title: Git - Sumário
 url: "/book/pt-br/v2/Começando-Sumário.html"
+aliases:
+- "/book/pt-br/Primeiros-passos-Resumo.html"
+- "/book/pt-br/v1/Primeiros-passos-Resumo.html"
 ---
 <h2 id="_sumário">Sumário</h2>
 <div class="paragraph">
