--- a/external/book/content/book/pt-br/v2/Começando-Uma-Breve-História-do-Git.html
+++ b/external/book/content/book/pt-br/v2/Começando-Uma-Breve-História-do-Git.html
@@ -17,6 +17,9 @@ book:
     next: book/pt-br/v2/Começando-O-Básico-do-Git
 title: Git - Uma Breve História do Git
 url: "/book/pt-br/v2/Começando-Uma-Breve-História-do-Git.html"
+aliases:
+- "/book/pt-br/Primeiros-passos-Uma-Breve-História-do-Git.html"
+- "/book/pt-br/v1/Primeiros-passos-Uma-Breve-História-do-Git.html"
 ---
 <h2 id="_uma_breve_história_do_git">Uma Breve História do Git</h2>
 <div class="paragraph">
