--- a/external/book/content/book/pt-br/v2/Customizing-Git-An-Example-Git-Enforced-Policy.html
+++ b/external/book/content/book/pt-br/v2/Customizing-Git-An-Example-Git-Enforced-Policy.html
@@ -16,6 +16,9 @@ book:
     previous: book/pt-br/v2/Customizing-Git-Git-Hooks
     next: book/pt-br/v2/Customizing-Git-Summary
 title: Git - An Example Git-Enforced Policy
+aliases:
+- "/book/pt-br/Customizando-o-Git-Um-exemplo-de-Política-Git-Forçada.html"
+- "/book/pt-br/v1/Customizando-o-Git-Um-exemplo-de-Política-Git-Forçada.html"
 ---
 <h2 id="r_an_example_git_enforced_policy">An Example Git-Enforced Policy</h2>
 <div class="paragraph">
