--- a/external/book/content/book/pt-br/v2/Customizing-Git-Git-Attributes.html
+++ b/external/book/content/book/pt-br/v2/Customizing-Git-Git-Attributes.html
@@ -16,6 +16,9 @@ book:
     previous: book/pt-br/v2/Customizing-Git-Git-Configuration
     next: book/pt-br/v2/Customizing-Git-Git-Hooks
 title: Git - Git Attributes
+aliases:
+- "/book/pt-br/Customizando-o-Git-Atributos-Git.html"
+- "/book/pt-br/v1/Customizando-o-Git-Atributos-Git.html"
 ---
 <h2 id="_git_attributes">Git Attributes</h2>
 <div class="paragraph">
