--- a/external/book/content/book/pt-br/v2/Customizing-Git-Git-Hooks.html
+++ b/external/book/content/book/pt-br/v2/Customizing-Git-Git-Hooks.html
@@ -16,6 +16,9 @@ book:
     previous: book/pt-br/v2/Customizing-Git-Git-Attributes
     next: book/pt-br/v2/Customizing-Git-An-Example-Git-Enforced-Policy
 title: Git - Git Hooks
+aliases:
+- "/book/pt-br/Customizando-o-Git-Hooks-do-Git.html"
+- "/book/pt-br/v1/Customizando-o-Git-Hooks-do-Git.html"
 ---
 <h2 id="r_git_hooks">Git Hooks</h2>
 <div class="paragraph">
