--- a/external/book/content/book/pt-br/v2/Customizing-Git-Summary.html
+++ b/external/book/content/book/pt-br/v2/Customizing-Git-Summary.html
@@ -16,6 +16,9 @@ book:
     previous: book/pt-br/v2/Customizing-Git-An-Example-Git-Enforced-Policy
     next: book/pt-br/v2/Git-and-Other-Systems-Git-as-a-Client
 title: Git - Summary
+aliases:
+- "/book/pt-br/Customizando-o-Git-Sumário.html"
+- "/book/pt-br/v1/Customizando-o-Git-Sumário.html"
 ---
 <h2 id="_summary_5">Summary</h2>
 <div class="paragraph">
