--- a/external/book/content/book/pt-br/v2/Distributed-Git-Contribuindo-com-um-Projeto.html
+++ b/external/book/content/book/pt-br/v2/Distributed-Git-Contribuindo-com-um-Projeto.html
@@ -16,6 +16,9 @@ book:
     previous: book/pt-br/v2/Distributed-Git-Fluxos-de-Trabalho-Distribuídos
     next: book/pt-br/v2/Distributed-Git-Maintaining-a-Project
 title: Git - Contribuindo com um Projeto
+aliases:
+- "/book/pt-br/Git-Distribuído-Contribuindo-Para-Um-Projeto.html"
+- "/book/pt-br/v1/Git-Distribuído-Contribuindo-Para-Um-Projeto.html"
 ---
 <h2 id="r_contributing_project">Contribuindo com um Projeto</h2>
 <div class="paragraph">
