--- a/external/book/content/book/pt-br/v2/Distributed-Git-Fluxos-de-Trabalho-Distribuídos.html
+++ b/external/book/content/book/pt-br/v2/Distributed-Git-Fluxos-de-Trabalho-Distribuídos.html
@@ -17,6 +17,11 @@ book:
     next: book/pt-br/v2/Distributed-Git-Contribuindo-com-um-Projeto
 title: Git - Fluxos de Trabalho Distribuídos
 url: "/book/pt-br/v2/Distributed-Git-Fluxos-de-Trabalho-Distribuídos.html"
+aliases:
+- "/book/pt-br/Git-Distribuído.html"
+- "/book/pt-br/v1/Git-Distribuído.html"
+- "/book/pt-br/Git-Distribuído-Fluxos-de-Trabalho-Distribuídos.html"
+- "/book/pt-br/v1/Git-Distribuído-Fluxos-de-Trabalho-Distribuídos.html"
 ---
 <p>
 Now that you have a remote Git repository set up as a point for all the developers to share their code, and you’re familiar with basic Git commands in a local workflow, you’ll look at how to utilize some of the distributed workflows that Git affords you.</p><p>In this chapter, you’ll see how to work with Git in a distributed environment as a contributor and an integrator.
