--- a/external/book/content/book/pt-br/v2/Distributed-Git-Summary.html
+++ b/external/book/content/book/pt-br/v2/Distributed-Git-Summary.html
@@ -16,6 +16,9 @@ book:
     previous: book/pt-br/v2/Distributed-Git-Maintaining-a-Project
     next: book/pt-br/v2/GitHub-Configurando-uma-conta
 title: Git - Summary
+aliases:
+- "/book/pt-br/Git-Distribuído-Resumo.html"
+- "/book/pt-br/v1/Git-Distribuído-Resumo.html"
 ---
 <h2 id="_summary">Summary</h2>
 <div class="paragraph">
