--- a/external/book/content/book/pt-br/v2/Funcionamento-Interno-do-Git-Encanamento-e-Porcelana.html
+++ b/external/book/content/book/pt-br/v2/Funcionamento-Interno-do-Git-Encanamento-e-Porcelana.html
@@ -16,6 +16,11 @@ book:
     previous: book/pt-br/v2/Git-and-Other-Systems-Summary
     next: book/pt-br/v2/Funcionamento-Interno-do-Git-Objetos-do-Git
 title: Git - Encanamento e Porcelana
+aliases:
+- "/book/pt-br/Git-Internamente.html"
+- "/book/pt-br/v1/Git-Internamente.html"
+- "/book/pt-br/Git-Internamente-Encanamento-Plumbing-e-Porcelana-Porcelain.html"
+- "/book/pt-br/v1/Git-Internamente-Encanamento-Plumbing-e-Porcelana-Porcelain.html"
 ---
 <p>Talvez você venha de um capítulo anterior para este, ou talvez você tenha chegado aqui depois de ler o resto do livro. De qualquer forma, aqui iremos para o funcionamento e implementação internos do Git.
 Nós achávamos que aprender esta informação era de fundamental importância para o entendimento do quão útil e poderoso o Git é, mas outras pessoas alegaram para nós que isso pode ser confuso e desnecessariamente complexo para iniciantes.
