--- a/external/book/content/book/pt-br/v2/Funcionamento-Interno-do-Git-Maintenance-and-Data-Recovery.html
+++ b/external/book/content/book/pt-br/v2/Funcionamento-Interno-do-Git-Maintenance-and-Data-Recovery.html
@@ -16,6 +16,9 @@ book:
     previous: book/pt-br/v2/Funcionamento-Interno-do-Git-Transfer-Protocols
     next: book/pt-br/v2/Funcionamento-Interno-do-Git-Variáveis-de-ambiente
 title: Git - Maintenance and Data Recovery
+aliases:
+- "/book/pt-br/Git-Internamente-Manutenção-e-Recuperação-de-Dados.html"
+- "/book/pt-br/v1/Git-Internamente-Manutenção-e-Recuperação-de-Dados.html"
 ---
 <h2 id="_maintenance_and_data_recovery">Maintenance and Data Recovery</h2>
 <div class="paragraph">
