--- a/external/book/content/book/pt-br/v2/Funcionamento-Interno-do-Git-Objetos-do-Git.html
+++ b/external/book/content/book/pt-br/v2/Funcionamento-Interno-do-Git-Objetos-do-Git.html
@@ -16,6 +16,9 @@ book:
     previous: book/pt-br/v2/Funcionamento-Interno-do-Git-Encanamento-e-Porcelana
     next: book/pt-br/v2/Funcionamento-Interno-do-Git-Referências-do-Git
 title: Git - Objetos do Git
+aliases:
+- "/book/pt-br/Git-Internamente-Objetos-do-Git.html"
+- "/book/pt-br/v1/Git-Internamente-Objetos-do-Git.html"
 ---
 <h2 id="r_objects">Objetos do Git</h2>
 <div class="paragraph">
