--- a/external/book/content/book/pt-br/v2/Funcionamento-Interno-do-Git-Packfiles.html
+++ b/external/book/content/book/pt-br/v2/Funcionamento-Interno-do-Git-Packfiles.html
@@ -16,6 +16,9 @@ book:
     previous: book/pt-br/v2/Funcionamento-Interno-do-Git-Referências-do-Git
     next: book/pt-br/v2/Funcionamento-Interno-do-Git-The-Refspec
 title: Git - Packfiles
+aliases:
+- "/book/pt-br/Git-Internamente-Packfiles.html"
+- "/book/pt-br/v1/Git-Internamente-Packfiles.html"
 ---
 <h2 id="_packfiles">Packfiles</h2>
 <div class="paragraph">
