--- a/external/book/content/book/pt-br/v2/Funcionamento-Interno-do-Git-Referências-do-Git.html
+++ b/external/book/content/book/pt-br/v2/Funcionamento-Interno-do-Git-Referências-do-Git.html
@@ -17,6 +17,9 @@ book:
     next: book/pt-br/v2/Funcionamento-Interno-do-Git-Packfiles
 title: Git - Referências do Git
 url: "/book/pt-br/v2/Funcionamento-Interno-do-Git-Referências-do-Git.html"
+aliases:
+- "/book/pt-br/Git-Internamente-Referencias-Git.html"
+- "/book/pt-br/v1/Git-Internamente-Referencias-Git.html"
 ---
 <h2 id="r_git_refs">Referências do Git</h2>
 <div class="paragraph">
