--- a/external/book/content/book/pt-br/v2/Funcionamento-Interno-do-Git-Sumário.html
+++ b/external/book/content/book/pt-br/v2/Funcionamento-Interno-do-Git-Sumário.html
@@ -17,6 +17,9 @@ book:
     next: book/pt-br/v2/Appendix-A:-Git-em-Outros-Ambientes-Graphical-Interfaces
 title: Git - Sumário
 url: "/book/pt-br/v2/Funcionamento-Interno-do-Git-Sumário.html"
+aliases:
+- "/book/pt-br/Git-Internamente-Resumo.html"
+- "/book/pt-br/v1/Git-Internamente-Resumo.html"
 ---
 <h2 id="_sumário_5">Sumário</h2>
 <div class="paragraph">
