--- a/external/book/content/book/pt-br/v2/Funcionamento-Interno-do-Git-Transfer-Protocols.html
+++ b/external/book/content/book/pt-br/v2/Funcionamento-Interno-do-Git-Transfer-Protocols.html
@@ -16,6 +16,9 @@ book:
     previous: book/pt-br/v2/Funcionamento-Interno-do-Git-The-Refspec
     next: book/pt-br/v2/Funcionamento-Interno-do-Git-Maintenance-and-Data-Recovery
 title: Git - Transfer Protocols
+aliases:
+- "/book/pt-br/Git-Internamente-Protocolos-de-Transferência.html"
+- "/book/pt-br/v1/Git-Internamente-Protocolos-de-Transferência.html"
 ---
 <h2 id="_transfer_protocols">Transfer Protocols</h2>
 <div class="paragraph">
