--- a/external/book/content/book/pt-br/v2/Fundamentos-de-Git-Apelidos-Git.html
+++ b/external/book/content/book/pt-br/v2/Fundamentos-de-Git-Apelidos-Git.html
@@ -16,6 +16,9 @@ book:
     previous: book/pt-br/v2/Fundamentos-de-Git-Criando-Tags
     next: book/pt-br/v2/Fundamentos-de-Git-Sumário
 title: Git - Apelidos Git
+aliases:
+- "/book/pt-br/Git-Essencial-Dicas-e-Truques.html"
+- "/book/pt-br/v1/Git-Essencial-Dicas-e-Truques.html"
 ---
 <h2 id="r_git_aliases">Apelidos Git</h2>
 <div class="paragraph">
