--- a/external/book/content/book/pt-br/v2/Fundamentos-de-Git-Criando-Tags.html
+++ b/external/book/content/book/pt-br/v2/Fundamentos-de-Git-Criando-Tags.html
@@ -16,6 +16,9 @@ book:
     previous: book/pt-br/v2/Fundamentos-de-Git-Trabalhando-de-Forma-Remota
     next: book/pt-br/v2/Fundamentos-de-Git-Apelidos-Git
 title: Git - Criando Tags
+aliases:
+- "/book/pt-br/Git-Essencial-Tagging.html"
+- "/book/pt-br/v1/Git-Essencial-Tagging.html"
 ---
 <h2 id="r_git_tagging">Criando Tags</h2>
 <div class="paragraph">
