--- a/external/book/content/book/pt-br/v2/Fundamentos-de-Git-Desfazendo-coisas.html
+++ b/external/book/content/book/pt-br/v2/Fundamentos-de-Git-Desfazendo-coisas.html
@@ -16,6 +16,9 @@ book:
     previous: book/pt-br/v2/Fundamentos-de-Git-Vendo-o-histórico-de-Commits
     next: book/pt-br/v2/Fundamentos-de-Git-Trabalhando-de-Forma-Remota
 title: Git - Desfazendo coisas
+aliases:
+- "/book/pt-br/Git-Essencial-Desfazendo-Coisas.html"
+- "/book/pt-br/v1/Git-Essencial-Desfazendo-Coisas.html"
 ---
 <h2 id="r_undoing">Desfazendo coisas</h2>
 <div class="paragraph">
