--- a/external/book/content/book/pt-br/v2/Fundamentos-de-Git-Gravando-Alterações-em-Seu-Repositório.html
+++ b/external/book/content/book/pt-br/v2/Fundamentos-de-Git-Gravando-Alterações-em-Seu-Repositório.html
@@ -17,6 +17,9 @@ book:
     next: book/pt-br/v2/Fundamentos-de-Git-Vendo-o-histórico-de-Commits
 title: Git - Gravando Alterações em Seu Repositório
 url: "/book/pt-br/v2/Fundamentos-de-Git-Gravando-Alterações-em-Seu-Repositório.html"
+aliases:
+- "/book/pt-br/Git-Essencial-Gravando-Alterações-no-Repositório.html"
+- "/book/pt-br/v1/Git-Essencial-Gravando-Alterações-no-Repositório.html"
 ---
 <h2 id="_gravando_alterações_em_seu_repositório">Gravando Alterações em Seu Repositório</h2>
 <div class="paragraph">
