--- a/external/book/content/book/pt-br/v2/Fundamentos-de-Git-Obtendo-um-Repositório-Git.html
+++ b/external/book/content/book/pt-br/v2/Fundamentos-de-Git-Obtendo-um-Repositório-Git.html
@@ -17,6 +17,11 @@ book:
     next: book/pt-br/v2/Fundamentos-de-Git-Gravando-Alterações-em-Seu-Repositório
 title: Git - Obtendo um Repositório Git
 url: "/book/pt-br/v2/Fundamentos-de-Git-Obtendo-um-Repositório-Git.html"
+aliases:
+- "/book/pt-br/Git-Essencial.html"
+- "/book/pt-br/v1/Git-Essencial.html"
+- "/book/pt-br/Git-Essencial-Obtendo-um-Repositório-Git.html"
+- "/book/pt-br/v1/Git-Essencial-Obtendo-um-Repositório-Git.html"
 ---
 <p>Se você pode ler apenas um capítulo antes de começar a usar o Git, este é ele.
 Este capítulo cobre cada comando básico que você precisa para fazer a maior parte das coisas com as quais eventualmente você vai se deparar durante seu uso do Git.
