--- a/external/book/content/book/pt-br/v2/Fundamentos-de-Git-Sumário.html
+++ b/external/book/content/book/pt-br/v2/Fundamentos-de-Git-Sumário.html
@@ -17,6 +17,9 @@ book:
     next: book/pt-br/v2/Branches-no-Git-Branches-em-poucas-palavras
 title: Git - Sumário
 url: "/book/pt-br/v2/Fundamentos-de-Git-Sumário.html"
+aliases:
+- "/book/pt-br/Git-Essencial-Sumário.html"
+- "/book/pt-br/v1/Git-Essencial-Sumário.html"
 ---
 <h2 id="_sumário_2">Sumário</h2>
 <div class="paragraph">
