--- a/external/book/content/book/pt-br/v2/Fundamentos-de-Git-Trabalhando-de-Forma-Remota.html
+++ b/external/book/content/book/pt-br/v2/Fundamentos-de-Git-Trabalhando-de-Forma-Remota.html
@@ -16,6 +16,9 @@ book:
     previous: book/pt-br/v2/Fundamentos-de-Git-Desfazendo-coisas
     next: book/pt-br/v2/Fundamentos-de-Git-Criando-Tags
 title: Git - Trabalhando de Forma Remota
+aliases:
+- "/book/pt-br/Git-Essencial-Trabalhando-com-Remotos.html"
+- "/book/pt-br/v1/Git-Essencial-Trabalhando-com-Remotos.html"
 ---
 <h2 id="r_remote_repos">Trabalhando de Forma Remota</h2>
 <div class="paragraph">
