--- a/external/book/content/book/pt-br/v2/Fundamentos-de-Git-Vendo-o-histórico-de-Commits.html
+++ b/external/book/content/book/pt-br/v2/Fundamentos-de-Git-Vendo-o-histórico-de-Commits.html
@@ -17,6 +17,9 @@ book:
     next: book/pt-br/v2/Fundamentos-de-Git-Desfazendo-coisas
 title: Git - Vendo o histórico de Commits
 url: "/book/pt-br/v2/Fundamentos-de-Git-Vendo-o-histórico-de-Commits.html"
+aliases:
+- "/book/pt-br/Git-Essencial-Visualizando-o-Histórico-de-Commits.html"
+- "/book/pt-br/v1/Git-Essencial-Visualizando-o-Histórico-de-Commits.html"
 ---
 <h2 id="r_viewing_history">Vendo o histórico de Commits</h2>
 <div class="paragraph">
