--- a/external/book/content/book/pt-br/v2/Git-Tools-Advanced-Merging.html
+++ b/external/book/content/book/pt-br/v2/Git-Tools-Advanced-Merging.html
@@ -16,6 +16,9 @@ book:
     previous: book/pt-br/v2/Git-Tools-Reset-Demystified
     next: book/pt-br/v2/Git-Tools-Rerere
 title: Git - Advanced Merging
+aliases:
+- "/book/pt-br/Ferramentas-do-Git-Merge-de-Sub-árvore-Subtree-Merging.html"
+- "/book/pt-br/v1/Ferramentas-do-Git-Merge-de-Sub-árvore-Subtree-Merging.html"
 ---
 <h2 id="r_advanced_merging">Advanced Merging</h2>
 <div class="paragraph">
