--- a/external/book/content/book/pt-br/v2/Git-Tools-Interactive-Staging.html
+++ b/external/book/content/book/pt-br/v2/Git-Tools-Interactive-Staging.html
@@ -16,6 +16,9 @@ book:
     previous: book/pt-br/v2/Git-Tools-Revision-Selection
     next: book/pt-br/v2/Git-Tools-Stashing-and-Cleaning
 title: Git - Interactive Staging
+aliases:
+- "/book/pt-br/Ferramentas-do-Git-Área-de-Seleção-Interativa.html"
+- "/book/pt-br/v1/Ferramentas-do-Git-Área-de-Seleção-Interativa.html"
 ---
 <h2 id="r_interactive_staging">Interactive Staging</h2>
 <div class="paragraph">
