--- a/external/book/content/book/pt-br/v2/Git-Tools-Rewriting-History.html
+++ b/external/book/content/book/pt-br/v2/Git-Tools-Rewriting-History.html
@@ -16,6 +16,9 @@ book:
     previous: book/pt-br/v2/Git-Tools-Searching
     next: book/pt-br/v2/Git-Tools-Reset-Demystified
 title: Git - Rewriting History
+aliases:
+- "/book/pt-br/Ferramentas-do-Git-Reescrevendo-o-Histórico.html"
+- "/book/pt-br/v1/Ferramentas-do-Git-Reescrevendo-o-Histórico.html"
 ---
 <h2 id="r_rewriting_history">Rewriting History</h2>
 <div class="paragraph">
