--- a/external/book/content/book/pt-br/v2/Git-Tools-Stashing-and-Cleaning.html
+++ b/external/book/content/book/pt-br/v2/Git-Tools-Stashing-and-Cleaning.html
@@ -16,6 +16,9 @@ book:
     previous: book/pt-br/v2/Git-Tools-Interactive-Staging
     next: book/pt-br/v2/Git-Tools-Signing-Your-Work
 title: Git - Stashing and Cleaning
+aliases:
+- "/book/pt-br/Ferramentas-do-Git-Fazendo-Stash.html"
+- "/book/pt-br/v1/Ferramentas-do-Git-Fazendo-Stash.html"
 ---
 <h2 id="r_git_stashing">Stashing and Cleaning</h2>
 <div class="paragraph">
