--- a/external/book/content/book/pt-br/v2/Git-Tools-Submodules.html
+++ b/external/book/content/book/pt-br/v2/Git-Tools-Submodules.html
@@ -16,6 +16,9 @@ book:
     previous: book/pt-br/v2/Git-Tools-Debugging-with-Git
     next: book/pt-br/v2/Git-Tools-Bundling
 title: Git - Submodules
+aliases:
+- "/book/pt-br/Ferramentas-do-Git-Submódulos.html"
+- "/book/pt-br/v1/Ferramentas-do-Git-Submódulos.html"
 ---
 <h2 id="r_git_submodules">Submodules</h2>
 <div class="paragraph">
