--- a/external/book/content/book/pt-br/v2/Git-and-Other-Systems-Summary.html
+++ b/external/book/content/book/pt-br/v2/Git-and-Other-Systems-Summary.html
@@ -16,6 +16,9 @@ book:
     previous: book/pt-br/v2/Git-and-Other-Systems-Migrating-to-Git
     next: book/pt-br/v2/Funcionamento-Interno-do-Git-Encanamento-e-Porcelana
 title: Git - Summary
+aliases:
+- "/book/pt-br/Git-e-Outros-Sistemas-Resumo.html"
+- "/book/pt-br/v1/Git-e-Outros-Sistemas-Resumo.html"
 ---
 <h2 id="_summary_7">Summary</h2>
 <div class="paragraph">
