--- a/external/book/content/book/pt-br/v2/Git-no-servidor-Gerando-Sua-Chave-Pública-SSH.html
+++ b/external/book/content/book/pt-br/v2/Git-no-servidor-Gerando-Sua-Chave-Pública-SSH.html
@@ -17,6 +17,9 @@ book:
     next: book/pt-br/v2/Git-no-servidor-Setting-Up-the-Server
 title: Git - Gerando Sua Chave Pública SSH
 url: "/book/pt-br/v2/Git-no-servidor-Gerando-Sua-Chave-Pública-SSH.html"
+aliases:
+- "/book/pt-br/Git-no-Servidor-Gerando-Sua-Chave-Pública-SSH.html"
+- "/book/pt-br/v1/Git-no-Servidor-Gerando-Sua-Chave-Pública-SSH.html"
 ---
 <h2 id="r_generate_ssh_key">Gerando Sua Chave Pública SSH</h2>
 <div class="paragraph">
