--- a/external/book/content/book/pt-br/v2/Git-no-servidor-Git-Daemon.html
+++ b/external/book/content/book/pt-br/v2/Git-no-servidor-Git-Daemon.html
@@ -16,6 +16,9 @@ book:
     previous: book/pt-br/v2/Git-no-servidor-Setting-Up-the-Server
     next: book/pt-br/v2/Git-no-servidor-Smart-HTTP
 title: Git - Git Daemon
+aliases:
+- "/book/pt-br/Git-no-Servidor-Serviço-Git.html"
+- "/book/pt-br/v1/Git-no-Servidor-Serviço-Git.html"
 ---
 <h2 id="_git_daemon">Git Daemon</h2>
 <div class="paragraph">
