--- a/external/book/content/book/pt-br/v2/Git-no-servidor-Os-Protocolos.html
+++ b/external/book/content/book/pt-br/v2/Git-no-servidor-Os-Protocolos.html
@@ -16,6 +16,11 @@ book:
     previous: book/pt-br/v2/Branches-no-Git-Sumário
     next: book/pt-br/v2/Git-no-servidor-Getting-Git-on-a-Server
 title: Git - Os Protocolos
+aliases:
+- "/book/pt-br/Git-no-Servidor.html"
+- "/book/pt-br/v1/Git-no-Servidor.html"
+- "/book/pt-br/Git-no-Servidor-Os-Protocolos.html"
+- "/book/pt-br/v1/Git-no-Servidor-Os-Protocolos.html"
 ---
 <p>
 Nesse ponto, você deve ser capaz de fazer a maioria das suas tarefas diárias usando Git. Contudo, para fazer qualquer colaboração no Git, você precisará de um repositório remoto Git. Embora tecnicamente você possa enviar e baixar alterações de repositórios individuais, isso é desencorajado porque você provavelmente confundirá o que está sendo trabalhando em cada um deles se você não for cuidadoso.</p><p>Além disso, você quer que seus colaboradores sejam capazes de acessar seu repositório mesmo se seu computador estiver offline - geralmente é útil ter um repositório comum mais confiável. Portanto, o método preferido para colaborar com alguém é definir um repositório intermediário que vocês possam enviar e baixar dele.</p><p>Executar um servidor Git é bastante simples.
