--- a/external/book/content/book/pt-br/v2/Git-no-servidor-Setting-Up-the-Server.html
+++ b/external/book/content/book/pt-br/v2/Git-no-servidor-Setting-Up-the-Server.html
@@ -16,6 +16,9 @@ book:
     previous: book/pt-br/v2/Git-no-servidor-Gerando-Sua-Chave-Pública-SSH
     next: book/pt-br/v2/Git-no-servidor-Git-Daemon
 title: Git - Setting Up the Server
+aliases:
+- "/book/pt-br/Git-no-Servidor-Configurando-o-Servidor.html"
+- "/book/pt-br/v1/Git-no-Servidor-Configurando-o-Servidor.html"
 ---
 <h2 id="r_setting_up_server">Setting Up the Server</h2>
 <div class="paragraph">
