--- a/external/book/content/book/pt-br/v2/Git-no-servidor-Sumário.html
+++ b/external/book/content/book/pt-br/v2/Git-no-servidor-Sumário.html
@@ -17,6 +17,9 @@ book:
     next: book/pt-br/v2/Distributed-Git-Fluxos-de-Trabalho-Distribuídos
 title: Git - Sumário
 url: "/book/pt-br/v2/Git-no-servidor-Sumário.html"
+aliases:
+- "/book/pt-br/Git-no-Servidor-Sumário.html"
+- "/book/pt-br/v1/Git-no-Servidor-Sumário.html"
 ---
 <h2 id="_sumário_4">Sumário</h2>
 <div class="paragraph">
