--- a/external/book/content/book/pt-br/v2/Git-no-servidor-Third-Party-Hosted-Options.html
+++ b/external/book/content/book/pt-br/v2/Git-no-servidor-Third-Party-Hosted-Options.html
@@ -16,6 +16,17 @@ book:
     previous: book/pt-br/v2/Git-no-servidor-GitLab
     next: book/pt-br/v2/Git-no-servidor-Sumário
 title: Git - Third Party Hosted Options
+aliases:
+- "/book/pt-br/Git-no-Servidor-Acesso-Público.html"
+- "/book/pt-br/v1/Git-no-Servidor-Acesso-Público.html"
+- "/book/pt-br/Git-no-Servidor-GitWeb.html"
+- "/book/pt-br/v1/Git-no-Servidor-GitWeb.html"
+- "/book/pt-br/Git-no-Servidor-Gitosis.html"
+- "/book/pt-br/v1/Git-no-Servidor-Gitosis.html"
+- "/book/pt-br/Git-no-Servidor-Gitolite.html"
+- "/book/pt-br/v1/Git-no-Servidor-Gitolite.html"
+- "/book/pt-br/Git-no-Servidor-Git-Hospedado.html"
+- "/book/pt-br/v1/Git-no-Servidor-Git-Hospedado.html"
 ---
 <h2 id="_third_party_hosted_options">Third Party Hosted Options</h2>
 <div class="paragraph">
