--- a/external/book/content/book/pt-br/v2/Começando-Instalando-o-Git.html
+++ b/external/book/content/book/pt-br/v2/Começando-Instalando-o-Git.html
@@ -17,6 +17,9 @@ book:
     next: book/pt-br/v2/Começando-Configuração-Inicial-do-Git
 title: Git - Instalando o Git
 url: "/book/pt-br/v2/Começando-Instalando-o-Git.html"
+aliases:
+- "/book/pt-br/Primeiros-passos-Instalando-Git.html"
+- "/book/pt-br/v1/Primeiros-passos-Instalando-Git.html"
 ---
 <h2 id="_instalando_o_git">Instalando o Git</h2>
 <div class="paragraph">
