--- a/external/book/content/book/pt-br/v2/Distributed-Git-Maintaining-a-Project.html
+++ b/external/book/content/book/pt-br/v2/Distributed-Git-Maintaining-a-Project.html
@@ -16,6 +16,9 @@ book:
     previous: book/pt-br/v2/Distributed-Git-Contribuindo-com-um-Projeto
     next: book/pt-br/v2/Distributed-Git-Summary
 title: Git - Maintaining a Project
+aliases:
+- "/book/pt-br/Git-Distribuído-Mantendo-Um-Projeto.html"
+- "/book/pt-br/v1/Git-Distribuído-Mantendo-Um-Projeto.html"
 ---
 <h2 id="_maintaining_a_project">Maintaining a Project</h2>
 <div class="paragraph">
