--- a/external/book/content/book/pt-br/v2/Funcionamento-Interno-do-Git-The-Refspec.html
+++ b/external/book/content/book/pt-br/v2/Funcionamento-Interno-do-Git-The-Refspec.html
@@ -16,6 +16,9 @@ book:
     previous: book/pt-br/v2/Funcionamento-Interno-do-Git-Packfiles
     next: book/pt-br/v2/Funcionamento-Interno-do-Git-Transfer-Protocols
 title: Git - The Refspec
+aliases:
+- "/book/pt-br/Git-Internamente-O-Refspec.html"
+- "/book/pt-br/v1/Git-Internamente-O-Refspec.html"
 ---
 <h2 id="r_refspec">The Refspec</h2>
 <div class="paragraph">
