--- a/external/book/content/book/pt-br/v2/Git-Tools-Summary.html
+++ b/external/book/content/book/pt-br/v2/Git-Tools-Summary.html
@@ -16,6 +16,9 @@ book:
     previous: book/pt-br/v2/Git-Tools-Credential-Storage
     next: book/pt-br/v2/Customizing-Git-Git-Configuration
 title: Git - Summary
+aliases:
+- "/book/pt-br/Ferramentas-do-Git-Sumário.html"
+- "/book/pt-br/v1/Ferramentas-do-Git-Sumário.html"
 ---
 <h2 id="_summary_4">Summary</h2>
 <div class="paragraph">
