--- a/external/book/content/book/pt-br/v2/Git-and-Other-Systems-Migrating-to-Git.html
+++ b/external/book/content/book/pt-br/v2/Git-and-Other-Systems-Migrating-to-Git.html
@@ -16,6 +16,9 @@ book:
     previous: book/pt-br/v2/Git-and-Other-Systems-Git-as-a-Client
     next: book/pt-br/v2/Git-and-Other-Systems-Summary
 title: Git - Migrating to Git
+aliases:
+- "/book/pt-br/Git-e-Outros-Sistemas-Migrando-para-o-Git.html"
+- "/book/pt-br/v1/Git-e-Outros-Sistemas-Migrando-para-o-Git.html"
 ---
 <h2 id="r_migrating">Migrating to Git</h2>
 <div class="paragraph">
