--- a/external/book/content/book/pt-br/v2/Git-no-servidor-Getting-Git-on-a-Server.html
+++ b/external/book/content/book/pt-br/v2/Git-no-servidor-Getting-Git-on-a-Server.html
@@ -16,6 +16,9 @@ book:
     previous: book/pt-br/v2/Git-no-servidor-Os-Protocolos
     next: book/pt-br/v2/Git-no-servidor-Gerando-Sua-Chave-Pública-SSH
 title: Git - Getting Git on a Server
+aliases:
+- "/book/pt-br/Git-no-Servidor-Configurando-Git-no-Servidor.html"
+- "/book/pt-br/v1/Git-no-Servidor-Configurando-Git-no-Servidor.html"
 ---
 <h2 id="r_git_on_the_server">Getting Git on a Server</h2>
 <div class="paragraph">
