--- a/external/book/content/book/pt-br/v2/_index.html
+++ b/external/book/content/book/pt-br/v2/_index.html
@@ -13,5 +13,6 @@ page_title: Git - Book
 url: "/book/pt-br/v2.html"
 aliases:
 - "/book/pt-br/v2/index.html"
+- "/book/pt-br/v1/index.html"
 - "/book/pt-br/index.html"
 ---
